src/test/ui/resolve/token-error-correct.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/token-error-correct.rs:7:1
   |
LL |     foo(bar(;
   |            - unmatched opening delimiter begins here
LL | }
   | ^ mismatched closing delimiter

error: expected expression, found `;`
  --> $DIR/token-error-correct.rs:6:13
   |
LL |     foo(bar(;
   |             ^ expected expression

error: expected one of `)`, `,`, `.`, `?`, or an operator, found keyword `fn`
  --> $DIR/token-error-correct.rs:10:1
   |
LL | }
   |  - expected one of `)`, `,`, `.`, `?`, or an operator
...
LL | fn foo(_: usize) {}
   | ^^ unexpected token

error: aborting due to 3 previous errors

